--- a/src/styles/core/_mixins.scss
+++ b/src/styles/core/_mixins.scss
@@ -22,7 +22,7 @@
 }
 
 
-@mixin gap-vertical($gap){
+@mixin gap--vertical($gap){
 
   $gap : $gap/2;
 
@@ -48,7 +48,7 @@
 
 }
 
-@mixin gap-horizontal($gap){
+@mixin gap($gap){
 
   $gap : $gap/2;
 
